--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,19 @@
     "name": "chrysanthos/auth-logging",
     "description": "Logs auth attempts",
     "keywords": [
-        "Chrysanthos",
         "Laravel",
+        "Laravel Framework",
+        "Laravel Package",
+        "Laravel Auth",
+        "Laravel Authentication",
+        "Laravel Admin",
+        "PHP Package",
         "Auth Logging"
     ],
+    "support": {
+        "issues": "https://github.com/chrysanthos/auth-logging/issues",
+        "source": "https://github.com/chrysanthos/auth-logging"
+    },
     "homepage": "https://github.com/Chrysanthos/auth-logging",
     "license": "MIT",
     "authors": [
@@ -16,11 +25,12 @@
         }
     ],
     "require": {
-        "php": "^7.3"
+        "php": "^7.3",
+        "illuminate/support": "^6.10"
     },
     "require-dev": {
-        "symfony/var-dumper": "^4.3",
-        "phpunit/phpunit": "^8.2"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
