--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,13 +10,15 @@ jobs:
       fail-fast: true
       matrix:
         php: [7.3, 7.4]
-        laravel: [6.*, 7.*]
+        laravel: [6.*, 7.*, 8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 6.*
             testbench: 4.*
           - laravel: 7.*
             testbench: 5.*
+          - laravel: 8.*
+            testbench: 6.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
