--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "illuminate/support": "^6.5 | ^7.0 | ^8.0 "
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^6.5 | ^7.0 | ^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
