--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "illuminate/support": "^6.5 | ^7.0 | ^8.0 "
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^6.5 | ^7.0 | ^8.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "^1.3.3",
         "phpunit/phpunit": "^8.0"
     },
     "autoload": {
