--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,14 +4,12 @@ on: [pull_request, push]
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
         php: [7.3, 7.4, 8.0]
         laravel: [6.*, 7.*, 8.*]
-        dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 6.*
             testbench: 4.*
@@ -20,7 +18,7 @@ jobs:
           - laravel: 8.*
             testbench: 6.*
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
     steps:
       - name: Checkout code
@@ -42,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+          composer update --prefer-stable --prefer-dist --no-interaction --no-suggest
 
       - name: Execute tests
         run: vendor/bin/phpunit
