--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": ">7.3",
         "illuminate/support": "^6.5 | ^7.0 | ^8.0"
     },
     "require-dev": {
