--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
         }
     ],
     "require": {
-        "php": ">7.3",
-        "illuminate/support": "^6.5 | ^7.0 | ^8.0"
+        "php": "^8.0|^8.1",
+        "illuminate/support": "^8.0|^9.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
