--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,11 +9,11 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0, 8.1]
-        laravel: [8.*, 9.0]
+        laravel: [8.*, 9.*]
         include:
           - laravel: 8.*
             testbench: 6.*
-          - laravel: 8.*
+          - laravel: 9.*
             testbench: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
