--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
-        "illuminate/support": "^8.0|^9.0"
+        "php": "^8.0|^8.1|^8.2",
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
