--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     ],
     "require": {
         "php": "^8.0|^8.1|^8.2",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0|^9.0|^10.0"|^11.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
