--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.2, 8.3]
-        laravel: [10.*, 11.*]
+        laravel: [10.*, 11.*, 12.*]
         include:
           - laravel: 10.*
             testbench: 8.*
